--- a/styles/_type.scss
+++ b/styles/_type.scss
@@ -7,6 +7,8 @@
 html, body, div, span, p, a, del, em, img, ol, ul, li, fieldset, form, label {
 	font-size: 100%;
 	vertical-align: baseline;
+	margin: 0;
+	padding: 0;
   }
 
 
