--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -10,15 +10,13 @@ footer, header, hgroup, menu, nav, section {
   }
 
 html, body {
-	min-height:100%;
   background-color: #000;
-  text-align: left;
-  width:768px;
   }
-
-body {
-	background:#fff;
-	background-attachment:fixed;
+  
+body {  
+  width:768px;
+  height: 1024px;
+  background-color: #fff;
   }
 
 .page {
