Data frame change through skrollr

--- a/styles/skrollrtest.scss
+++ b/styles/skrollrtest.scss
@@ -314,8 +314,8 @@ h4 {
     }
   
   @-skrollr-keyframes sk-progress {
-    0 { width:0%;background:hsl(200, 100%, 50%);}
-    500 { width:100%;background:hsl(920, 100%, 50%);}
+    0 { background:hsl(200, 100%, 50%);}
+    500 { background:hsl(920, 100%, 50%);}
     }
 
 	
