--- a/styles/skrollrtest.css
+++ b/styles/skrollrtest.css
@@ -125,7 +125,7 @@ body {
   width: 768px;
   height: 6px;
   top: 0;
-  background: #444;
+  background: white;
   z-index: 200; }
 
 #cover {
@@ -241,7 +241,7 @@ h4 {
 
 @-skrollr-keyframes sk-progress {
   0 {
-    background: #00aaff; }
+    background: blue; }
 
   500 {
-    background: #00aaff; } }
+    background: red; } }
