--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,7 +18,7 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
     background:blue;
     }
   #{$progress_section_end} {
-    background:green;
+    background:pink;
     }
   }
 
