color change for testing

--- a/styles/skrollrtest-sass.scss
+++ b/styles/skrollrtest-sass.scss
@@ -24,7 +24,7 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
     background:blue;
     }
   #{$progress_section_end} {
-    background:red;
+    background:pink;
     }
   }
 
