--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,25 +4,37 @@
 @import "layout";
 @import "type";
 
+$page_duration: 500;
+$buffer: 100;
+
 $progress_section_begin: 0;
 $progress_section_duration: 400;
 $progress_section_end: $progress_section_begin + $progress_section_duration;
 
+$one_before: 0;
+$one_buffer: $one_before + $buffer;
+$one_duration: $page_duration;
+$one_begin: $one_before + $one_duration;
+$one_end: $one_begin + $one_duration;
+
+$two_before: $one_end;
+$two_duration: $page_duration;
+$two_begin: $two_before + $two_duration;
+$one_end: $two_begin + $two_duration;
+
 #progress {
-    -skrollr-animation-name:sk-progress-sass;  
+    -skrollr-animation-name:sk-progress;  
     }
-
-@-skrollr-keyframes sk-progress-sass {    
-  #{$progress_section_begin} {
-    background:blue;
+    
+#cover {
+    -skrollr-animation-name:one-scroll;  
+    
+    .front {-skrollr-animation-name:one-front;}    
+    .cutout.back {-skrollr-animation-name:one-cutout;}    
+    .svg-draw path {-skrollr-animation-name:one-draw;}
+    .button.closed {-skrollr-animation-name:one-button;}    
+    .button p {-skrollr-animation-name:one-button-p;}
     }
-  #{$progress_section_end} {
-    background:pink;
-    }
-  }
-
-	
-#cover {}
 
 #story {}  
 
@@ -31,5 +43,60 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
 #empty {}
 
 #pageEnd {}
+
+@-skrollr-keyframes sk-progress {    
+  #{$progress_section_begin} {
+    background:blue;}
+  #{$progress_section_end} {
+    background:pink;}
+  }
+  
+@-skrollr-keyframes one-scroll {    
+  #{$one_begin} {
+    top:0px;}
+  #{$one_end} {
+    top:(- $screen-height);}
+  }
+  
+@-skrollr-keyframes one-front {    
+  #{$one_buffer} {
+    transform:rotate(0deg); }
+  #{$one_begin} {
+    transform:rotate(-90deg);}
+  }
+  
+@-skrollr-keyframes one-cutout {    
+  #{$one_buffer} {
+    top:0px;}
+  #{$one_begin} {
+    top:(- $screen-height);}
+  }
+  
+@-skrollr-keyframes one-draw {    
+  #{$one_buffer} {
+    stroke-dashoffset:6000;
+    stroke:black;}
+  #{$one_end} {
+    stroke-dashoffset:0;}
+  }
+  
+@-skrollr-keyframes one-button {    
+  #{$one_buffer} {
+    height:0px;
+    }
+  #{$one_begin} {
+    height:90px;
+    }
+  }
+  
+  
+@-skrollr-keyframes one-button-p {    
+  #{$one_buffer} {
+    display:none;
+    }
+  #{$one_begin} {
+    display:block;
+    }
+  }
 
   
