--- a/styles/skrollrtest-sass.css
+++ b/styles/skrollrtest-sass.css
@@ -3,7 +3,7 @@
 /***********************************************************************************************************/
 html, body {
   width: 100%;
-  height: 100%;
+  /* height:100%; */
   padding: 0;
   margin: 0;
   overflow-x: hidden; }
@@ -52,7 +52,7 @@ html, body {
 body {
   width: 768px;
   height: 1024px;
-  background-color: #fff; }
+  background-color: pink; }
 
 .page {
   width: 768px;
@@ -120,7 +120,7 @@ body {
 
 #progress {
   /*width: 6px;
-	height:1024px;
+	height:$page-height;
   right:0;*/
   width: 768px;
   height: 6px;
@@ -154,7 +154,6 @@ body {
   background-color: rgba(0, 0, 0, 0.025); }
 
 #pageEnd {
-  width: 768px;
   height: 1024px;
   top: 1024px;
   background-color: rgba(0, 0, 0, 0.025); }
