--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,8 @@
 @import "type";
 
 $page_duration: 500;
-$buffer: 100;
+$padding_buffer: 100;
+$page_buffer: 500;
 
 $progress_section_begin: 0;
 $progress_section_duration: 400;
@@ -14,15 +15,15 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
 $one_duration: $page_duration;
 $one_before: 0;
 $one_onscreen: 0;
-$one_buffer: $one-onscreen + $buffer;
+$one_buffer: $one-onscreen + $padding_buffer;
 $one_scrollstart: $one_before + $one_duration;
 $one_scrolloff: $one_scrollstart + $one_duration;
 
 $two_duration: $page_duration;
 $two_before: $one-scrollstart;
 $two-onscreen: $one_scrolloff;
-$two_buffer: $two-onscreen + $buffer;
-$two_scrollstart: $two_onscreen + $two_duration;
+$two_buffer: $two-onscreen + $page_buffer;
+$two_scrollstart: $two_onscreen + $two_buffer;
 $two_scrolloff: $two_scrollstart + $two_duration;
 
 #progress {
@@ -40,13 +41,13 @@ $two_scrolloff: $two_scrollstart + $two_duration;
   }
     
 
-#story {
+#howto {
   -skrollr-animation-name:two-scroll;
   
   .front{-skrollr-animation-name:two-title}  
   }  
 
-#howto {}
+#story {}
   
 #empty {}
 
