--- a/styles/main.css
+++ b/styles/main.css
@@ -257,10 +257,13 @@ h4 {
     -skrollr-animation-name: two-title; }
 
 @-skrollr-keyframes two-scroll {
-  2500 {
+  500 {
     top: 1024px; }
 
   1000 {
+    top: 0; }
+
+  2500 {
     top: 0; }
 
   3000 {
@@ -270,8 +273,8 @@ h4 {
   1000 {
     transform: rotate(0deg); }
 
-  3000 {
-    transform: rotate(30deg); } }
+  2500 {
+    transform: rotate(10deg); } }
 
 @-skrollr-keyframes one-scroll {
   500 {
