--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,6 @@
 
 $page_duration: 500;
 $padding_buffer: 100;
-$page_buffer: 500;
 
 $progress_section_begin: 0;
 $progress_section_duration: 400;
@@ -15,16 +14,16 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
 $one_duration: $page_duration;
 $one_before: 0;
 $one_onscreen: 0;
-$one_buffer: $one-onscreen + $padding_buffer;
 $one_scrollstart: $one_before + $one_duration;
-$one_scrolloff: $one_scrollstart + $one_duration;
+$one_scrolloff: $one_scrollstart + $screen-height;
+$one_buffer: $one_onscreen + $padding_buffer;
 
 $two_duration: $page_duration;
-$two_before: $one-scrollstart;
+$two_before: $one_scrollstart;
 $two-onscreen: $one_scrolloff;
-$two_buffer: $two-onscreen + $page_buffer;
-$two_scrollstart: $two_onscreen + $two_buffer;
-$two_scrolloff: $two_scrollstart + $two_duration;
+$two_scrollstart: $two_onscreen + $two_duration;
+$two_scrolloff: $two_scrollstart + $screen-height;
+$two_buffer: $two_onscreen + $padding_buffer;
 
 #progress {
   -skrollr-animation-name:sk-progress;  
