--- a/styles/_elements-test.scss
+++ b/styles/_elements-test.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 html, body, div, span, p, a, del, em, img, ol, ul, li, fieldset, form, label {
 	margin: 0;
 	padding: 0;
@@ -22,7 +24,7 @@ body {
 .page {
   width:$screen-width;
 	height:$screen-height;
-	top:0px;
+	height:500;
 	
   h1 {
     top:100px;
