Revert "skrollr sass @imports"
This reverts commit 9148e6bcda1a098ae1938f287b5b58952d08f55b.

--- a/styles/skrollrtest-sass.css
+++ b/styles/skrollrtest-sass.css
@@ -238,6 +238,12 @@ h4 {
 #progress {
   -skrollr-animation-name: sk-progress-sass; }
 
+/*
+@-skrollr-keyframes sk-progress {
+  0 { background:blue;}
+  500 { background:red;}
+  }
+*/
 @-skrollr-keyframes sk-progress-sass {
   0 {
     background: blue; }
