--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,5 @@
-@import "variables";
 @import "fixed-positioning";
-@import "elements";
-@import "layout";
+@import "pages";
 @import "type";
 
 $page_duration: 500;
