--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
-$screen-height: 1024px;
-$screen-width: 768px;
+$screen-height: 1024;
+$screen-width: 768;
+$page-height: $screen-height;
 
 $page-color-dark: rgba(0,0,0,0.025);
 $page-color-dark: rgba(235,235,235,1);
